--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,36 @@
-<<<<<<< HEAD
-=======
 app/*
-/app/code/*
-/app/design/*
+!/app/code/*
+!/app/design/*
 /bin/*
 /dev/*
 /generated/*
 /lib/*
 /phpserver/*
-/CHANGELOG.md
-/COPYING.txt
-/Gruntfile.js.sample
-/LICENSE.txt
-/LICENSE_AFL.txt
-/SECURITY.md
-/auth.json.sample
-/bin/*
-/composer.json
-/composer.lock
-/dev/*
-/generated/*
-/grunt-config.json.sample
-/it_it/*
-/lib/*
-/nginx.conf.sample
-/package-lock.json
-/package.json.sample
-/phpserver/*
-/pub/*
-/setup/*
-/var/*
-/vendor/*
+!/CHANGELOG.md
+!/COPYING.txt
+!/Gruntfile.js.sample
+!/LICENSE.txt
+!/LICENSE_AFL.txt
+!/SECURITY.md
+!/auth.json.sample
+!/bin/*
+!/composer.json
+!/composer.lock
+!/dev/*
+!/generated/*
+!/grunt-config.json.sample
+!/it_it/*
+!/lib/*
+!/nginx.conf.sample
+!/package-lock.json
+!/package.json.sample
+!/phpserver/*
+!/pub/*
+!/setup/*
+!/var/*
+!/vendor/*
 
 
->>>>>>> 4a6db61 (gitin)
 /.buildpath
 /.cache
 /.metadata
@@ -72,54 +69,40 @@ atlassian*
 /.php-cs-fixer.cache
 /grunt-config.json
 /pub/media/*.*
-/pub/media/.htaccess
+!/pub/media/.htaccess
 /pub/media/attribute/*
-/pub/media/attribute/.htaccess
+!/pub/media/attribute/.htaccess
 /pub/media/analytics/*
 /pub/media/catalog/*
-/pub/media/catalog/.htaccess
+!/pub/media/catalog/.htaccess
 /pub/media/customer/*
-/pub/media/customer/.htaccess
+!/pub/media/customer/.htaccess
 /pub/media/downloadable/*
-/pub/media/downloadable/.htaccess
+!/pub/media/downloadable/.htaccess
 /pub/media/favicon/*
 /pub/media/import/*
-/pub/media/import/.htaccess
+!/pub/media/import/.htaccess
 /pub/media/logo/*
 /pub/media/custom_options/*
-/pub/media/custom_options/.htaccess
+!/pub/media/custom_options/.htaccess
 /pub/media/theme/*
 /pub/media/theme_customization/*
-/pub/media/theme_customization/.htaccess
+!/pub/media/theme_customization/.htaccess
 /pub/media/wysiwyg/*
-/pub/media/wysiwyg/.htaccess
+!/pub/media/wysiwyg/.htaccess
 /pub/media/tmp/*
-/pub/media/tmp/.htaccess
+!/pub/media/tmp/.htaccess
 /pub/media/captcha/*
 /pub/media/sitemap/*
-/pub/media/sitemap/.htaccess
+!/pub/media/sitemap/.htaccess
 /pub/static/*
-/pub/static/.htaccess
+!/pub/static/.htaccess
 
 /var/*
-/var/.htaccess
+!/var/.htaccess
 /vendor/*
-/vendor/.htaccess
+!/vendor/.htaccess
 /generated/*
-/generated/.htaccess
+!/generated/.htaccess
 .DS_Store
 
-
-
-/.editorconfig
-/.htaccess
-/.htaccess.sample
-/.php-cs-fixer.dist.php
-/.user.ini
-/it_it
-/udo systemctl start elasticsearch
-
-
-/prova2
-
-prova
